Bug 20468 - Canvas drawImage() doesn't match current specification
Summary: Canvas drawImage() doesn't match current specification
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC All
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-20 15:47 PDT by Dirk Schulze
Modified: 2008-09-02 22:50 PDT (History)
0 users

See Also:


Attachments
drawImage() updated (12.55 KB, patch)
2008-08-20 15:50 PDT, Dirk Schulze
no flags Details | Formatted Diff | Diff
drawImage() update (12.56 KB, patch)
2008-08-21 04:16 PDT, Dirk Schulze
no flags Details | Formatted Diff | Diff
drawImage() update (32.56 KB, patch)
2008-08-21 11:16 PDT, Dirk Schulze
no flags Details | Formatted Diff | Diff
Canvas drawImage (12.35 KB, patch)
2008-08-29 00:20 PDT, Dirk Schulze
darin: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Schulze 2008-08-20 15:47:38 PDT
Canvas drawImage() doesn't match current specification. Negative source and destination-rects are aloud now. 
An INDEX_SIZE_ERR exception is only thrown when sw or sh are zero (like in Firefox).
Comment 1 Dirk Schulze 2008-08-20 15:50:31 PDT
Created attachment 22904 [details]
drawImage() updated

drawImage() matches the specification now and exception are only thrown if sh or sw are zero (like ff).

Could only test it on gtk/cairo.
Comment 2 Dirk Schulze 2008-08-21 04:16:54 PDT
Created attachment 22918 [details]
drawImage() update

added const & to normalizeRect.
Comment 3 Dirk Schulze 2008-08-21 11:16:09 PDT
Created attachment 22921 [details]
drawImage() update

Added more testcases.
Comment 4 Dirk Schulze 2008-08-29 00:20:35 PDT
Created attachment 23066 [details]
Canvas drawImage

Removed pixel tests and added getImageData test.
Comment 5 Darin Adler 2008-08-30 23:56:28 PDT
Comment on attachment 23066 [details]
Canvas drawImage

r=me
Comment 6 Mark Rowe (bdash) 2008-09-02 22:50:17 PDT
Landed in r36043.