2008-09-02  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Darin Adler.

        Fix https://bugs.webkit.org/show_bug.cgi?id=20468
        Updated drawImage() in canvas to match the current specification.

        Test: fast/canvas/drawImage-with-negative-source-destination.html

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::normalizeRect):
        (WebCore::CanvasRenderingContext2D::drawImage):

2008-09-02  Dirk Schulze  <vbs85@gmx.de>

        Reviewed by Darin Adler.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=20468
        Test negative source and destination rect in drawImage()

        * fast/canvas/drawImage-with-invalid-args-expected.txt:
        * fast/canvas/drawImage-with-invalid-args.html:
        * fast/canvas/drawImage-with-negative-source-destination-expected.txt: Added.
        * fast/canvas/drawImage-with-negative-source-destination.html: Added.
        * fast/canvas/drawImage-with-negative-source-destination.js: Added.

Canonical link: https://commits.webkit.org/28444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36043 268f45cc-cd09-0410-ab3c-d52691b4dbfc